# edg

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.telegraf  README.md  THIRD_PARTY_LICENSES.md  codecov.yml  docker-compose.yml  go.mod  go.sum  release-please-config.json  test_pipeline.sh
.github/workflows/: deploy-dev-docker.yml  deploy-dev.yml  release-please.yml  release.yml  test.yml
adapters/python/: README.md  pyproject.toml
adapters/python/examples/: temp_sensor.py  temp_sensor_with_recovery.py  vibration_sensor.py
adapters/python/sdk/: __init__.py  adapter.py  backoff.py  client.py  exceptions.py  models.py
adapters/python/sdk/tests/: __init__.py  conftest.py  test_adapter.py  test_backoff.py  test_backward_compatibility.py  test_collect_loop.py  test_exceptions.py  test_models.py  test_relations.py
claudedocs/: RELEASE_TESTING_GUIDE.md
cmd/core/: main.go  main_test.go
configs/telegraf/: telegraf.conf
contexts/: README.md  context_test.go  edg-context.jsonld
deploy/configs/core/: config.dev.yaml  (+2 more)
deploy/docker/: .env.example  Dockerfile.core  Dockerfile.grafana  Dockerfile.telegraf  Dockerfile.victoriametrics  compose.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  USER_GUIDE.md  architecture.drawio
internal/core/: handler.go  handler_jetstream_test.go  handler_test.go  loader.go  loader_test.go  meta_handler.go  meta_handler_test.go  metadata.go  relations.go  relations_test.go  store.go  store_test.go  types.go  types_test.go
scripts/: install.sh
templates/: temp-sensor.yaml  vibration-sensor.yaml
(+7 files in other folders)
